--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,16 @@
     "files.associations": {
         "iostream": "cpp",
         "ostream": "cpp",
-        "random": "cpp"
+        "random": "cpp",
+        "deque": "cpp",
+        "string": "cpp",
+        "vector": "cpp",
+        "valarray": "cpp",
+        "*.tcc": "cpp",
+        "list": "cpp",
+        "cstdlib": "cpp",
+        "cmath": "cpp",
+        "complex": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
